test/parsing/ferguson/reserved-string.good
reserved-string.chpl:1: error: attempt to redefine reserved type 'string'
reserved-string.chpl:3: error: attempt to redefine reserved type 'string'
reserved-string.chpl:6: error: attempt to redefine reserved type 'string'
reserved-string.chpl:7: error: attempt to redefine reserved type 'string'
reserved-string.chpl:10: error: attempt to redefine reserved type 'string'
reserved-string.chpl:12: error: attempt to redefine reserved type 'string'
reserved-string.chpl:17: error: attempt to redefine reserved type 'string'
